--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
   teal, blue, blurple, magenta, pink!
   -->
-  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer>
+<script>
 var video = document.getElementById("myVideo");
 var btn = document.getElementById("myBtn");
 
