--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@ function myFunction() {
     btn.innerHTML = "Play";
   }
 }
+  addEventListener("click", function() {
+    var
+          el = document.documentElement
+        , rfs =
+               el.requestFullScreen
+            || el.webkitRequestFullScreen
+            || el.mozRequestFullScreen
+    ;
+    rfs.call(el);
+});
 </script>
 </body>
 
