--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>FirePlace</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <video autoplay muted loop id="myVideo">
   <source src="https://drive.google.com/uc?export=download&id=1vgurEz5u1j7ph6CIEq3BEBNJBaicGNlX" type="video/mp4">
